[gd_scene load_steps=6 format=3 uid="uid://du1f5d02pe8fx"]

[ext_resource type="Script" uid="uid://ciqrqw3ea3flf" path="res://scripts/main_menu.gd" id="1_l6cm7"]
[ext_resource type="PackedScene" uid="uid://s4fsefg4csaj" path="res://scenes/options_menu.tscn" id="2_ekxnf"]
[ext_resource type="AudioStream" uid="uid://crmgbkqbbxrgj" path="res://music/blood_platformer_intro.wav" id="3_blood"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vue75"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ekxnf"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="MusicMenuPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_blood")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -376.0
offset_top = -272.0
offset_right = 376.0
offset_bottom = 272.0
grow_horizontal = 2
grow_vertical = 2

[node name="Nowa gra" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_vue75")
text = "Nowa gra"

[node name="Wczytaj" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Wczytaj"

[node name="Ustawienia" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_vue75")
text = "Ustawienia
"

[node name="Zamknij" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_ekxnf")
text = "Zamknij"

[node name="OptionsMenu" parent="." instance=ExtResource("2_ekxnf")]
visible = false
layout_mode = 2
anchors_preset = 0

[connection signal="pressed" from="VBoxContainer/Wczytaj" to="." method="_on_wczytaj_pressed"]
